assets/css/screen.css
/* ... */
table table table {
  background-color: #fff;
}

table tbody > tr:nth-child(odd) > td, table tbody > tr:nth-child(odd) > th {
  background-color: #f3f3f3;
}

table.plain tbody > tr:nth-child(odd) > td, table.plain tbody > tr:nth-child(odd) > th {
  background: transparent;
}

img {
  width: 100%;
  height: auto;
}

.hidden {
  display: none;
}

/* ==========================================================================
   2. Toggle Menu
   ========================================================================== */
.toggle-menu {
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  height: 200px;
  z-index: 99;
}

.toggle-menu span {
  padding: 0 5px 0 0;
}

#icon {
  width: 26px;
  height: 30px;
  position: relative;
  margin-left: 26px;
  top: 20px;
  float: left;
  z-index: 10;
  overflow: hidden;
  cursor: pointer;
}

#icon div {
  width: 100%;
  height: 5px;
  background: #fff;
  border-radius: 10px;
  margin: 4px auto;
  transition: all 0.3s;
}

#icon.active .one {
  -webkit-transform: rotate(45deg) translate(5px, 5px);
  -moz-transform: rotate(45deg) translate(5px, 5px);
  -o-transform: rotate(45deg) translate(5px, 5px);
  -ms-transform: rotate(45deg) translate(5px, 5px);
  transform: rotate(45deg) translate(5px, 5px);
}

#icon.active .two {
  opacity: 0;
}

#icon.active .three {
  -webkit-transform: rotate(-45deg) translate(7px, -8px);
  -moz-transform: rotate(-45deg) translate(7px, -8px);
  -o-transform: rotate(-45deg) translate(7px, -8px);
  -ms-transform: rotate(-45deg) translate(7px, -8px);
  transform: rotate(-45deg) translate(7px, -8px);
}

#menu {
  color: #fff;
  height: 105px;
  position: relative;
  top: 50px;
  right: 35px;
  overflow: hidden;
  z-index: 10;
  display: none;
  width: 111px;
}

#menu ul {
  margin: 0 auto;
  padding: 0;
}

#menu ul li {
  display: block;
  list-style-type: none;
  position: relative;
  margin: 0 auto;
  padding: 8px;
  text-transform: uppercase;
  font-size: 1rem;
  line-height: 0;
}

#menu a {
  color: #fff;
  font-weight: 900;
}

/* ==================================================================================================================
   3. Code Highlighter (Monokai Sublime style) | Derived from Monokai by noformnocontent http://nn.mit-license.org/
   ================================================================================================================== */
.hljs {
  display: block;
  overflow-x: auto;
  padding: 0.5em;
  background: #23241f;
  -webkit-text-size-adjust: none;
}

.hljs, .hljs-tag, .css .hljs-rules, .css .hljs-value, .aspectj .hljs-function, .css .hljs-function .hljs-preprocessor, .hljs-pragma {
  color: #f8f8f2;
}

.hljs-strongemphasis, .hljs-strong, .hljs-emphasis {
  color: #a8a8a2;
}

.hljs-bullet, .hljs-blockquote, .hljs-horizontal_rule, .hljs-number, .hljs-regexp, .alias .hljs-keyword, .hljs-literal, .hljs-hexcolor {
  color: #ae81ff;
}

.hljs-tag .hljs-value, .hljs-code, .hljs-title, .css .hljs-class, .hljs-class .hljs-title:last-child {
  color: #a6e22e;
}

.hljs-link_url {
  font-size: 80%;
}

.hljs-strong, .hljs-strongemphasis {
  font-weight: bold;
}

.hljs-emphasis, .hljs-strongemphasis, .hljs-class .hljs-title:last-child, .hljs-typename {
  font-style: italic;
}

.hljs-keyword, .ruby .hljs-class .hljs-keyword:first-child, .ruby .hljs-function .hljs-keyword, .hljs-function, .hljs-change, .hljs-winutils, .hljs-flow, .nginx .hljs-title, .tex .hljs-special, .hljs-header, .hljs-attribute, .hljs-symbol, .hljs-symbol .hljs-string, .hljs-tag .hljs-title, .hljs-value, .alias .hljs-keyword:first-child, .css .hljs-tag, .css .unit, .css .hljs-important {
  color: #f92672;
}

.hljs-function .hljs-keyword, .hljs-class .hljs-keyword:first-child, .hljs-aspect .hljs-keyword:first-child, .hljs-constant, .hljs-typename, .css .hljs-attribute {
  color: #66d9ef;
}

.hljs-variable, .hljs-params, .hljs-class .hljs-title, .hljs-aspect .hljs-title {
  color: #f8f8f2;
}

.hljs-string, .css .hljs-id, .hljs-subst, .hljs-type, .ruby .hljs-class .hljs-parent, .hljs-built_in, .django .hljs-template_tag, .django .hljs-variable, .smalltalk .hljs-class, .django .hljs-filter .hljs-argument, .smalltalk .hljs-localvars, .smalltalk .hljs-array, .hljs-attr_selector, .hljs-pseudo, .hljs-addition, .hljs-stream, .hljs-envvar, .apache .hljs-tag, .apache .hljs-cbracket, .tex .hljs-command, .hljs-prompt, .hljs-link_label, .hljs-link_url {
  color: #e6db74;
}

.hljs-comment, .hljs-javadoc, .hljs-annotation, .hljs-decorator, .hljs-pi, .hljs-doctype, .hljs-deletion, .hljs-shebang, .apache .hljs-sqbracket, .tex .hljs-formula {
  color: #75715e;
}

.coffeescript .javascript, .javascript .xml, .tex .hljs-formula, .xml .javascript, .xml .vbscript, .xml .css, .xml .hljs-cdata, .xml .php, .php .xml {
  opacity: 0.5;
}

/* ==========================================================================
   3. General
   ========================================================================== */
.inner {
  max-width: 650px;
  margin: 0 auto;
  padding: 0 25px;
}

.main-header {
  text-align: center;
  padding: 35px 0 50px 0;
  background: rgba(130, 207, 208, 0.6) center center;
  background-size: cover;
}

.main-header .logo {
  width: 150px;
  height: 150px;
  display: block;
  margin: 0 auto;
  /* transition: all 0.25s ease-in;
 -webkit-animation: slideDown 1s ease;
 -moz-animation: slideDown 1s ease;
 -o-animation: slideDown 1s ease;
 animation: slideDown 1s ease; */
 visibility: visible !important;
}

.main-header .logo .img-logo {
  width: 100%;
  height: 100%;
  border-radius: 50%;
}

.main-header .title {
  display: inline-block;
  position: relative;
  padding-bottom: 14px;
  border-bottom: 2.5px solid #fff;
}

.main-header .title h1 {
  color: #fff;
  margin-bottom: 0;
  font-size: 2.3rem;
  line-height: 2.7rem;
  text-transform: uppercase;
  font-weight: 900;
  transition: color 0.5s ease-in-out;
}

.main-header .title p {
    color: #fff;
    margin: 0;
    font-size: 1.1rem;
    text-transform: uppercase;
}
/* ... */

